tests/machine/x/kotlin/dataset_where_filter.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/dataset_where_filter.kt:22:106: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
public fun String.compareTo(other: String, ignoreCase: Boolean = ...): Int defined in kotlin.text
            __res.add(mutableMapOf("name" to person.name, "age" to person.age, "is_senior" to person.age >= 60))
                                                                                                         ^
