tests/machine/x/kotlin/dataset_where_filter.kt
// Generated by Mochi compiler v0.10.26 on 2025-07-17T00:57:35Z
fun String.starts_with(prefix: String): Boolean = this.startsWith(prefix)

fun toBool(v: Any?): Boolean = when (v) {
    is Boolean -> v
    is Int -> v != 0
    is Double -> v != 0.0
    is String -> v.isNotEmpty()
    null -> false
    else -> true
}
// Code generated from dataset_where_filter.mochi

data class People(var name: String, var age: Int)

val people = mutableListOf(People(name = "Alice", age = 30), People(name = "Bob", age = 15), People(name = "Charlie", age = 65), People(name = "Diana", age = 45))

val adults = run {
    val __res = mutableListOf<Any?>()
    for (person in people) {
        if (person.age >= 18) {
            __res.add(mutableMapOf("name" to person.name, "age" to person.age, "is_senior" to person.age >= 60))
        }
    }
    __res
}

fun main() {
    println("--- Adults ---")
    for (person in adults) {
        println(listOf((person as MutableMap<String, Any?>)["name"], "is", (person as MutableMap<String, Any?>)["age"], if (toBool((person as MutableMap<String, Any?>)["is_senior"])) " (senior)" else "").joinToString(" "))
    }
}
